@@ -7,7 +7,8 @@ examples of typical use-cases.
 
 Additionally, as we have Python under the cmd2 loop, we can
 use Python to make tests or assertions after any step in the script.
-This makes it easy to write scripts as complete use-case tests.
+This makes it easy to write scripts as complete [[UseCase]] tests.
+At the same time, it gives end-users a catalogue of complete working examples.
 
 There are a series of example files in the
 [[share/examples|https://github.com/OpenTrading/OpenTrader/blob/master/share/examples/]]
@@ -56,8 +57,6 @@ You dont need to have a listener thread running.
 
 ==== share/examples/test_backtest.sh
 
-These tests do not need to have either RabbitMQ or Mt4 running:
-we need to know where you have your metatrader installed.
 You MUST have created a CSV file for the tests to work on.
 
 * [[OTCmd2-backtest.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest.txt]]
@@ -65,8 +64,6 @@ You MUST have created a CSV file for the tests to work on.
 * [[OTCmd2-backtest_recipe.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_recipe.txt]]
 
 * [[OTCmd2-backtest_omlette.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_omlette.txt]]
-
-* [[OTCmd2-backtest_feed_plot.txt|https://github.com/OpenTrading/OpenTrader/raw/master/share/examples/OTCmd2-backtest_feed_plot.txt]]
 
 
 ==== share/examples/test_mt4_rabbitmq_running.sh
