@@ -1,3 +1,8 @@
+commit ab8bc2b15e2661009c89ca512bdbae8d69d5671b
+Date:   Tue Jun 16 18:30:32 2015 +0300
+
+    Fixed doc scripts again.
+
 commit 3458b610860c5e8452c1a9378a6cac578b41a1cd
 Date:   Tue Jun 16 17:58:16 2015 +0300
 
